k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nestsphere-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 50m
spec:
  tls:
    - hosts:
        - app.nestsphere.com
      secretName: nestsphere-tls-cert
  rules:
    - host: app.nestsphere.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: nestsphere-backend-svc
                port:
                  number: 3000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nestsphere-frontend-svc
                port:
                  number: 80
